[package]
name = "spdk-io"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
spdk-io-sys = { path = "../spdk-io-sys" }
thiserror = "2"
futures-channel = "0.3"

[dev-dependencies]
futures-task = "0.3"
futures = "0.3"
futures-lite = "2"
libc = "0.2"
